--- a/templates/base.html
+++ b/templates/base.html
@@ -4,13 +4,7 @@
 <nav>
   <h1>Countle</h1>
   <ul>
-    {% if g.user %}
-      <li><span>{{ g.user['username'] }}</span>
-      <li><a href="{{ url_for('auth.logout') }}">Log Out</a>
-    {% else %}
-      <li><a href="{{ url_for('auth.register') }}">Register</a>
-      <li><a href="{{ url_for('auth.login') }}">Log In</a>
-    {% endif %}
+    {% block button %}{% endblock %}
   </ul>
 </nav>
 <section class="content">
